--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "client-sessions": "^0.8.0",
+    "coinbase": "^2.0.6",
     "express": "^4.15.4",
-    "mongoose": "^4.11.10"
+    "mongoose": "^4.11.10",
+    "request": "^2.81.0",
+    "require": "^2.4.20"
   }
 }
