--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "client-sessions": "^0.8.0",
     "coinbase": "^2.0.6",
     "express": "^4.15.4",
+    "lodash": "^4.17.4",
     "mongoose": "^4.11.10",
+    "nconf": "^0.8.4",
     "request": "^2.81.0",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "twit": "^2.2.9",
+    "twitter": "^1.7.1"
   }
 }
