--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
+    "cheerio": "^1.0.0-rc.2",
     "client-sessions": "^0.8.0",
     "coinbase": "^2.0.6",
     "express": "^4.15.4",
